working on reorderable ios list from forms

--- a/XFormsUI/XFormsUI.iOS/XFormsUI.iOS.csproj
+++ b/XFormsUI/XFormsUI.iOS/XFormsUI.iOS.csproj
@@ -90,6 +90,8 @@
   </PropertyGroup>
   <ItemGroup>
     <Compile Include="CustomRenderer\CustomEntryRenderer.cs" />
+    <Compile Include="CustomRenderer\CustomListViewRenderer.cs" />
+    <Compile Include="CustomRenderer\MyViewCellRenderer.cs" />
     <Compile Include="Main.cs" />
     <Compile Include="AppDelegate.cs" />
     <None Include="Entitlements.plist" />
